# Proyecto2_SISTOS

./: CMakeLists.txt  README.md  acciones.txt  main.cpp  procesos.txt  recursos.txt
include/Core/: Action.h  Process.h  Resource.h  SimulationClock.h
include/GUI/: GanttChartPanel.h  MainFrame.h  SchedulerPanel.h  SimulationPanel.h  SynchronizationPanel.h
include/Scheduler/: BaseScheduler.h  FIFOScheduler.cpp  FIFOScheduler.h  PriorityScheduler.cpp  PriorityScheduler.h  RoundRobinScheduler.h  SJFScheduler.h  SRTScheduler.h  ScheduleEvent.cpp
include/Synchronization/: BaseSynchronization.h  MutexLock.h  Semaphore.h
include/Utils/: ColorManager.h  FileParser.h
src/Core/: Action.cpp  Process.cpp  Resource.cpp  SimulationClock.cpp
src/GUI/: GanttChartPanel.cpp  MainFrame.cpp  SchedulerPanel.cpp  SimulationPanel.cpp  SynchronizationPanel.cpp
src/Scheduler/: BaseScheduler.cpp  FIFOScheduler.cpp  PriorityScheduler.cpp  RoundRobinScheduler.cpp  SJFScheduler.cpp  SRTScheduler.cpp
src/Synchornization/: BaseSynchronization.cpp  MutexLock.cpp  Semaphore.cpp
src/Utils/: ColorManager.cpp  FileParser.cpp
